--- a/ref.bib
+++ b/ref.bib
@@ -457,6 +457,42 @@ ADS Bibcode: 1959cbs..book.....K},
   month       = {6},
 }
 
+@article{prsa_phoebe_ebai_2008,
+	title = {Artificial Intelligence Approach to the Determination of Physical Properties of Eclipsing Binaries. I. The {EBAI} Project},
+	volume = {687},
+	issn = {0004-637X},
+	url = {https://ui.adsabs.harvard.edu/abs/2008ApJ...687..542P},
+	doi = {10.1086/591783},
+	abstract = {Achieving maximum scientific results from the overwhelming volume of astronomical data to be acquired over the next few decades demands novel, fully automatic methods of data analysis. Here we concentrate on eclipsing binary ({EB}) stars, a prime source of astrophysical information, of which only some hundreds have been rigorously analyzed, but whose numbers will reach millions in a decade. We describe the artificial neural network ({ANN}) approach which is able to surmount the human bottleneck and permit {EB}-based scientific yield to keep pace with future data rates. The {ANN}, following training on a sample of 33,235 model light curves, outputs a set of approximate model parameters [T2/T1, (R1 + R2)/a, esin ω , ecos ω , and sin i] for each input light curve data set. The obtained parameters can then be readily passed to sophisticated modeling engines. We also describe a novel method polyfit for preprocessing observational light curves before inputting their data to the {ANN} and present the results and analysis of testing the approach on synthetic data and on real data including 50 binaries from the Catalog and Atlas of Eclipsing Binaries ({CALEB}) database and 2580 light curves from {OGLE} survey data. The success rate, defined by less than a 10\% error in the network output parameter values, is approximately 90\% for the {OGLE} sample and close to 100\% for the {CALEB} sample—sufficient for a reliable statistical analysis. The code is made available to the public. Our approach is applicable to {EB} light curves of all classes; this first paper in the eclipsing binaries via artificial intelligence ({EBAI}) series focuses on detached {EBs}, which is the class most challenging for this approach.},
+	pages = {542--565},
+	journaltitle = {The Astrophysical Journal},
+	author = {Prša, A. and Guinan, E. F. and Devinney, E. J. and {DeGeorge}, M. and Bradstreet, D. H. and Giammarco, J. M. and Alcock, C. R. and Engle, S. G.},
+	urldate = {2024-04-30},
+	date = {2008-11-01},
+	note = {Publisher: {IOP}
+{ADS} Bibcode: 2008ApJ...687..542P},
+	keywords = {Astrophysics, binaries: eclipsing, methods: data analysis, methods: numerical, stars: fundamental parameters},
+	file = {Full Text PDF:/home/ramon/Zotero/storage/7LDNJBTY/Prša et al. - 2008 - Artificial Intelligence Approach to the Determinat.pdf:application/pdf},
+}
+
+@article{prsa_phoebe_increased_model_fidelity_mesh_2016,
+	title = {Physics Of Eclipsing Binaries. {II}. Toward the Increased Model Fidelity},
+	volume = {227},
+	issn = {0067-0049},
+	url = {https://ui.adsabs.harvard.edu/abs/2016ApJS..227...29P},
+	doi = {10.3847/1538-4365/227/2/29},
+	abstract = {The precision of photometric and spectroscopic observations has been systematically improved in the last decade, mostly thanks to space-borne photometric missions and ground-based spectrographs dedicated to finding exoplanets. The field of eclipsing binary stars strongly benefited from this development. Eclipsing binaries serve as critical tools for determining fundamental stellar properties (masses, radii, temperatures, and luminosities), yet the models are not capable of reproducing observed data well, either because of the missing physics or because of insufficient precision. This led to a predicament where radiative and dynamical effects, insofar buried in noise, started showing up routinely in the data, but were not accounted for in the models. {PHOEBE} ({PHysics} Of Eclipsing {BinariEs}; http://phoebe-project.org) is an open source modeling code for computing theoretical light and radial velocity curves that addresses both problems by incorporating missing physics and by increasing the computational fidelity. In particular, we discuss triangulation as a superior surface discretization algorithm, meshing of rotating single stars, light travel time effects, advanced phase computation, volume conservation in eccentric orbits, and improved computation of local intensity across the stellar surfaces that includes the photon-weighted mode, the enhanced limb darkening treatment, the better reflection treatment, and Doppler boosting. Here we present the concepts on which {PHOEBE} is built and proofs of concept that demonstrate the increased model fidelity.},
+	pages = {29},
+	journaltitle = {The Astrophysical Journal Supplement Series},
+	author = {Prša, A. and Conroy, K. E. and Horvat, M. and Pablo, H. and Kochoska, A. and Bloemen, S. and Giammarco, J. and Hambleton, K. M. and Degroote, P.},
+	urldate = {2024-05-01},
+	date = {2016-12-01},
+	note = {Publisher: {IOP}
+{ADS} Bibcode: 2016ApJS..227...29P},
+	keywords = {Astrophysics - Solar and Stellar Astrophysics, binaries: close, binaries: eclipsing, methods: numerical, stars: fundamental parameters, techniques: photometric, techniques: spectroscopic},
+	file = {Full Text PDF:/home/ramon/Zotero/storage/ZQCCE9BX/Prša et al. - 2016 - Physics Of Eclipsing Binaries. II. Toward the Incr.pdf:application/pdf},
+}
+
 @article{understandingLombScargle,
   AUTHOR          = {Jacob T. VanderPlas},
   JOURNAL         = {The Astrophysical Journal Supplement Series},
