--- a/Introduccion/SistemasBinarios.tex
+++ b/Introduccion/SistemasBinarios.tex
@@ -637,7 +637,7 @@ típica de un sistema \textit{EA} se puede apreciar en la
 	\label{figuraEACurvaLuz}
 \end{figure}
 
-\subsection{EB - \textbeta \space Lyrae}
+\subsection{EB - \textbeta \ Lyrae}
 
 En el caso de un sistema eclipsante semi-separado, la curva de luz observada se
 le clasifica como tipo \textit{EB}, o de tipo \textbeta \space Lyrae. En un sistema
