--- a/Tesis.tex
+++ b/Tesis.tex
@@ -197,14 +197,15 @@
 % https://tex.stackexchange.com/questions/11031/how-to-do-the-curvy-l-for-lagrangian-or-laplace-transforms#11144
 \newcommand{\Lagr}{\mathcal{L}}
 %------------------------------------------------------------------------------------
-\definecolor{MyGray}{rgb}{0.30,0.31,0.32} % definizione grigio
-\definecolor{MyDarkBlue}{rgb}{0.,0.08,0.5} % blu scuro
-\definecolor{MyLightBlue}{rgb}{0.2,0.2,1.0} % blu chiaro
-\definecolor{MyDarkRed}{rgb}{0.5,0.04,0} % rosso scuro
-\definecolor{MyDarkGreen}{rgb}{0.0,0.4,0.08} % verde scuro
-\definecolor{SectionBlue}{rgb}{0.16,0.32,0.75} % blu per sezioni
-\definecolor{SubSectionBlue}{rgb}{0.0,0.53,0.74} % blu per sottosezioni
-\definecolor{SubSubSectionBlue}{rgb}{0.0,0.58,0.65} % blu per sottosottosezioni
+\definecolor{MyGray}{rgb}{0.30,0.31,0.32} 
+\definecolor{MyDarkBlue}{rgb}{0.,0.08,0.5} 
+\definecolor{MyLightBlue}{rgb}{0.2,0.2,1.0} 
+\definecolor{MyDarkRed}{rgb}{0.5,0.04,0} 
+\definecolor{MyDarkGreen}{rgb}{0.0,0.4,0.08}
+
+\definecolor{SectionBlue}{rgb}{0.16,0.32,0.75} 
+\definecolor{SubSectionBlue}{rgb}{0.0,0.53,0.74} 
+\definecolor{SubSubSectionBlue}{rgb}{0.0,0.58,0.65} 
 %------------------------------------------------------------------------------------
 % styling part pages to fit abstract 
     % https://tex.stackexchange.com/questions/30432/styling-the-part-page 
