--- a/ref.bib
+++ b/ref.bib
@@ -24,8 +24,7 @@
 	author = {Li, Kai and Gao, Xiang and Liu, Xin-Yi and Gao, Xing and Li, Ling-Zhi and Chen, Xu and Sun, Guo-You},
 	urldate = {2024-04-23},
 	date = {2022-11-01},
-	langid = {english},
-	file = {Li et al. - 2022 - Extremely Low Mass Ratio Contact Binaries. I. The .pdf:/home/ramon/Zotero/storage/3WE5UESY/Li et al. - 2022 - Extremely Low Mass Ratio Contact Binaries. I. The .pdf:application/pdf},
+	langid = {english}
 }
 
 @misc{michel_rotse1_new_wuma_eclipsing_binary_2016,
@@ -41,8 +40,7 @@
 	date = {2016-06-10},
 	eprinttype = {arxiv},
 	eprint = {1606.03464 [astro-ph]},
-	keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
-	file = {arXiv Fulltext PDF:/home/ramon/Zotero/storage/R6WT2TBE/Michel et al. - 2016 - ROTSE1 J164341.65+251748.1 a new W UMa-type eclip.pdf:application/pdf;arXiv.org Snapshot:/home/ramon/Zotero/storage/XTTYJ7RJ/1606.html:text/html},
+	keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Solar and Stellar Astrophysics}
 }
 
 @article{michel_photometric_study_contact_binary_2023,
@@ -54,8 +52,7 @@
 	journaltitle = {Revista Mexicana de Astronomía y Astrofísica},
 	shortjournal = {Revista Mexicana de Astronomía y Astrofísica},
 	author = {Michel, Raul and Barani, Carlo and Martignoni, M. and Acerbi, Francesco and Altamirano-Dévora, L.},
-	date = {2023-04-01},
-	file = {Full Text PDF:/home/ramon/Zotero/storage/AAM6P6S6/Michel et al. - 2023 - PHOTOMETRIC STUDY OF TWO CONTACT BINARY SYSTEMS AN.pdf:application/pdf},
+	date = {2023-04-01}
 }
 
 @thesis{ibanez_cvs_wide_field_surveys_2021,
@@ -376,8 +373,7 @@ ADS Bibcode: 1959cbs..book.....K},
 	author = {Morris, Brett M. and Tollerud, Erik and Sipőcz, Brigitta and Deil, Christoph and Douglas, Stephanie T. and Medina, Jazmin Berlanga and Vyhmeister, Karl and Smith, Toby R. and Littlefair, Stuart and Price-Whelan, Adrian M. and Gee, Wilfred T. and Jeschke, Eric},
 	month = feb,
 	year = {2018},
-	pages = {128},
-	file = {Morris et al. - 2018 - astroplan An Open Source Observation Planning Pac.pdf:/home/ramon/Zotero/storage/TEEGQS6C/Morris et al. - 2018 - astroplan An Open Source Observation Planning Pac.pdf:application/pdf},
+	pages = {128}
 }
 
 @article{gaiaEclipsingBinarySystemsTwoGauss,
@@ -404,8 +400,7 @@ ADS Bibcode: 1959cbs..book.....K},
 	urldate = {2024-03-25},
 	date = {2002-01-01},
 	note = {{ADS} Bibcode: 2002AJ....123..430S},
-	keywords = {Astrophysics, Cataclysmic Variables, Stars: Novae, Techniques: Photometric, Techniques: Spectroscopic},
-	file = {Full Text PDF:/home/ramon/Zotero/storage/IJ5IZN7B/Szkody et al. - 2002 - Cataclysmic Variables from The Sloan Digital Sky S.pdf:application/pdf},
+	keywords = {Astrophysics, Cataclysmic Variables, Stars: Novae, Techniques: Photometric, Techniques: Spectroscopic}
 }
 
 @article{atlasATOObjectDiscovery,
@@ -423,8 +418,7 @@ ADS Bibcode: 1959cbs..book.....K},
 	month = nov,
 	year = {2018},
 	note = {Publisher: The American Astronomical Society},
-	pages = {241},
-	file = {IOP Full Text PDF:/home/ramon/Zotero/storage/G8ZHYB67/Heinze et al. - 2018 - A First Catalog of Variable Stars Measured by the .pdf:application/pdf},
+	pages = {241}
 }
 
 
@@ -457,7 +451,7 @@ ADS Bibcode: 1959cbs..book.....K},
   month       = {6},
 }
 
-@article{prsa_phoebe_ebai_2008,
+@article{prsa_phoebe_artificial_intelligence_approach_ebai_2008,
 	title = {Artificial Intelligence Approach to the Determination of Physical Properties of Eclipsing Binaries. I. The {EBAI} Project},
 	volume = {687},
 	issn = {0004-637X},
@@ -471,8 +465,7 @@ ADS Bibcode: 1959cbs..book.....K},
 	date = {2008-11-01},
 	note = {Publisher: {IOP}
 {ADS} Bibcode: 2008ApJ...687..542P},
-	keywords = {Astrophysics, binaries: eclipsing, methods: data analysis, methods: numerical, stars: fundamental parameters},
-	file = {Full Text PDF:/home/ramon/Zotero/storage/7LDNJBTY/Prša et al. - 2008 - Artificial Intelligence Approach to the Determinat.pdf:application/pdf},
+	keywords = {Astrophysics, binaries: eclipsing, methods: data analysis, methods: numerical, stars: fundamental parameters}
 }
 
 @article{prsa_phoebe_increased_model_fidelity_mesh_2016,
@@ -489,8 +482,25 @@ ADS Bibcode: 1959cbs..book.....K},
 	date = {2016-12-01},
 	note = {Publisher: {IOP}
 {ADS} Bibcode: 2016ApJS..227...29P},
-	keywords = {Astrophysics - Solar and Stellar Astrophysics, binaries: close, binaries: eclipsing, methods: numerical, stars: fundamental parameters, techniques: photometric, techniques: spectroscopic},
-	file = {Full Text PDF:/home/ramon/Zotero/storage/ZQCCE9BX/Prša et al. - 2016 - Physics Of Eclipsing Binaries. II. Toward the Incr.pdf:application/pdf},
+	keywords = {Astrophysics - Solar and Stellar Astrophysics, binaries: close, binaries: eclipsing, methods: numerical, stars: fundamental parameters, techniques: photometric, techniques: spectroscopic}
+}
+
+@article{thompson_class_eccentric_binaries_tidal_distortion_heartbeat_2012,
+	title = {A Class Of Eccentric Binaries With Dynamic Tidal Distortions Discovered With Kepler},
+	volume = {753},
+	issn = {0004-637X},
+	url = {https://dx.doi.org/10.1088/0004-637X/753/1/86},
+	doi = {10.1088/0004-637X/753/1/86},
+	abstract = {We have discovered a class of eccentric binary systems within the Kepler data archive that have dynamic tidal distortions and tidally induced pulsations. Each has a uniquely shaped light curve that is characterized by periodic brightening or variability at timescales of 4–20 days, frequently accompanied by shorter period oscillations. We can explain the dominant features of the entire class with orbitally varying tidal forces that occur in close, eccentric binary systems. The large variety of light curve shapes arises from viewing systems at different angles. This hypothesis is supported by spectroscopic radial velocity measurements for five systems, each showing evidence of being in an eccentric binary system. Prior to the discovery of these 17 new systems, only four stars, where {KOI}-54 is the best example, were known to have evidence of these dynamic tides and tidally induced oscillations. We perform preliminary fits to the light curves and radial velocity data, present the overall properties of this class, and discuss the work required to accurately model these systems.},
+	pages = {86},
+	number = {1},
+	journaltitle = {The Astrophysical Journal},
+	shortjournal = {{ApJ}},
+	author = {Thompson, Susan E. and Everett, Mark and Mullally, Fergal and Barclay, Thomas and Howell, Steve B. and Still, Martin and Rowe, Jason and Christiansen, Jessie L. and Kurtz, Donald W. and Hambleton, Kelly and Twicken, Joseph D. and Ibrahim, Khadeejah A. and Clarke, Bruce D.},
+	urldate = {2024-05-03},
+	date = {2012-06},
+	langid = {english},
+	note = {Publisher: The American Astronomical Society}
 }
 
 @article{understandingLombScargle,
@@ -530,8 +540,7 @@ ADS Bibcode: 1959cbs..book.....K},
 	author = {Wenger, M. and Ochsenbein, F. and Egret, D. and Dubois, P. and Bonnarel, F. and Borde, S. and Genova, F. and Jasniewicz, G. and Laloë, S. and Lesteven, S. and Monier, R.},
 	month = apr,
 	year = {2000},
-	pages = {9--22},
-	file = {Wenger et al. - 2000 - The SIMBAD astronomical database The CDS referenc.pdf:/home/ramon/Zotero/storage/5RNUUDQR/Wenger et al. - 2000 - The SIMBAD astronomical database The CDS referenc.pdf:application/pdf},
+	pages = {9--22}
 }
 
 @software{ccdproc241,
@@ -592,6 +601,5 @@ ADS Bibcode: 1959cbs..book.....K},
 	note = {arXiv:0910.2233 [astro-ph]},
 	keywords = {Astrophysics - Instrumentation and Methods for Astrophysics},
 	pages = {1782--1800},
-	annote = {Comment: submitted to AJ},
-	file = {arXiv.org Snapshot:/home/ramon/Zotero/storage/2WJDV6Q5/0910.html:text/html},
+	annote = {Comment: submitted to AJ}
 }
