--- a/ref.bib
+++ b/ref.bib
@@ -386,7 +386,6 @@ ADS Bibcode: 1959cbs..book.....K},
   YEAR            = {2017}
 }
 
-
 @article{szkody2002CvSearchSdss,
 	title = {Cataclysmic Variables from The Sloan Digital Sky Survey. I. The First Results},
 	volume = {123},
@@ -432,14 +431,23 @@ ADS Bibcode: 1959cbs..book.....K},
   month           = {8},
 }
 
-@article{phoebeGeneralFrameworkPaper,
-  AUTHOR          = {Kyle E. Conroy and Angela Kochoska and Daniel Hey and Herbert Pablo and Kelly M. Hambleton and Joseph Giammarco and Michael Abdul-Masih and Andrej Prša and David Jones},
-  JOURNAL         = {The Astrophysical Journal Supplement Series},
-  NUMBER          = {250},
-  TITLE           = {Physics of Eclipsing Binaries. V. General Framework for Solving the Inverse Problem},
-  VOLUME          = {},
-  month           = {October},
-  YEAR            = {2020}
+@article{conroy_phoebe_v_framework_solving_inverse_problem_2020,
+	title = {Physics of Eclipsing Binaries. V. General Framework for Solving the Inverse Problem},
+	volume = {250},
+	issn = {0067-0049, 1538-4365},
+	url = {http://arxiv.org/abs/2006.16951},
+	doi = {10.3847/1538-4365/abb4e2},
+	abstract = {{PHOEBE} 2 is a Python package for modeling the observables of eclipsing star systems, but until now has focused entirely on the forward-model -- that is, generating a synthetic model given fixed values of a large number of parameters describing the system and the observations. The inverse problem, obtaining orbital and stellar parameters given observational data, is more complicated and computationally expensive as it requires generating a large set of forward-models to determine which set of parameters and uncertainties best represent the available observational data. The process of determining the best solution and also of obtaining reliable and robust uncertainties on those parameters often requires the use of multiple algorithms, including both optimizers and samplers. Furthermore, the forward-model of {PHOEBE} has been designed to be as physically robust as possible, but is computationally expensive compared to other codes. It is useful, therefore, to use whichever code is most efficient given the reasonable assumptions for a specific system, but learning the intricacies of multiple codes presents a barrier to doing this in practice. Here we present the 2.3 release of {PHOEBE} (publicly available from http://phoebe-project.org) which introduces a general framework for defining and handling distributions on parameters, and utilizing multiple different estimation, optimization, and sampling algorithms. The presented framework supports multiple forward-models, including the robust model built into {PHOEBE} itself.},
+	pages = {34},
+	number = {2},
+	journaltitle = {The Astrophysical Journal Supplement Series},
+	shortjournal = {{ApJS}},
+	author = {Conroy, Kyle E. and Kochoska, Angela and Hey, Daniel and Pablo, Herbert and Hambleton, Kelly M. and Jones, David and Giammarco, Joseph and Abdul-Masih, Michael and Prsa, Andrej},
+	urldate = {2024-05-08},
+	date = {2020-10-01},
+	eprinttype = {arxiv},
+	eprint = {2006.16951 [astro-ph]},
+	keywords = {Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Solar and Stellar Astrophysics}
 }
 
 @techreport{phoebeScientificReference,
